Fix armor not showing, vehicle bars

--- a/scss/cyberpunk2020.scss
+++ b/scss/cyberpunk2020.scss
@@ -60,11 +60,10 @@ $field-border-width: 2px;
     }
 
     .meter-gauge {
-        height: 10px;
         border: 2px solid $text-colour;
         > span {
             display: block;
-            height: 100%;
+            min-height: 6px;
             background-color: $meter-colour;
             &.danger {
                 background-color: $meter-danger-colour;
